NEXT 2016/12/07 FEATURE
   * New Metrics in stdplug: ChernSimons, RezzollaZhidenko.

1.1.1 2016/10/30 BUG
   * When Gyoto is configured to be installed in another prefix than
     /usr/local/, look into two additional directories when loading
     plug-ins: /usr/local/lib/gyoto/<sovers>/ and
     /usr/local/lib/gyoto/.
   * The name of the versioned directories for plug-ins (<sovers>
     above) is now the major version of the library, so users don't
     need to reinstall there plug-ins when ugrading Gyoto to a
     binary-compatible release.
   * --enable-hardening now also enables -fPIE.
   * Yorick: actually implement `picture' painter for the matte_paint
     framework. Allow using any two or three-dimensional image or
     stack of images in the `picture' and `panorama' painters.
   * Include minimal plug-in example in plugins/null/.

1.1.0 2016/09/12 ABI 4 (5:0:0)
   * New functionality: provide a plug-in for writing new Metrics,
     Astrobjs and Spectra in Python.
   * New functionality: objects can describe there own
     properties. This feature is accessible through the help() method
     in the Python and Yorick interfaces and through -h on the
     command-line: "gyoto -hMetric::KerrBL"
   * New functionality: adding a flag to highligh the shadow region in
     a strong-field image
   * Various improvements and bug fixes in the Python extension.
   * Yorick: Add more functions to control the floating-point
     environment from Yorick.
   * Screen: properly parse "Mask" as a filename
   * KerrKS: remove specific integrator, which has never worked well.
   * PowerLawSpectrum: add cut-offs.
   * DirectionalDisk: add cutoff in lamp/disk frames.
   * PolishDoughnut: add central_temperature_ parameter.

1.0.2 2015/06/26 BUG
   * Fix FTBFS with gcc 5.0;
   * Improve fenv support and lack thereof with some compilers;
   * Distinguish size_t from unsigned long in Gyoto::Value;
   * Rewrite option parsing in `gyoto' command line utility, add many