@@ -42,6 +42,7 @@
 #include "GyotoDisk3D.h"
 #include "GyotoDynamicalDisk3D.h"
 #include "GyotoDirectionalDisk.h"
+#include "GyotoDeformedTorus.h"
 
 // include Spectrum headers
 #include "GyotoPowerLawSpectrum.h"
@@ -84,6 +85,8 @@ extern "C" void __GyotostdplugInit() {
 		    &(Astrobj::Subcontractor<Astrobj::DynamicalDisk3D>));
   Astrobj::Register("DirectionalDisk",
 		    &(Astrobj::Subcontractor<Astrobj::DirectionalDisk>));
+  Astrobj::Register("DeformedTorus",
+		    &(Astrobj::Subcontractor<Astrobj::DeformedTorus>));
   // Register Spectra
   Spectrum::Register("PowerLaw", 
 		     &(Spectrum::Subcontractor<Spectrum::PowerLaw>));
