@@ -1,5 +1,6 @@
-NEXT 2016/12/07 FEATURE
+NEXT 2016/12/07 FTR
    * New Metrics in stdplug: ChernSimons, RezzollaZhidenko.
+   * New Astrobjs in stdplug: DeformedTorus.
 
 1.1.1 2016/10/30 BUG
    * When Gyoto is configured to be installed in another prefix than
